# generic-pool

./: Taskfile.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lint-and-test.yaml
generic_pool/: __init__.py  factory.py  pool.py  queue_like.py
tests/: test_pool.py
