[tool.poetry]
name = "generic-pool"
version = "0.1.1"
description = "A generic object pool implementation"
authors = ["Frédérique Mittelstaedt <pypi@gfm.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gfmio/generic-pool"
repository = "https://github.com/gfmio/generic-pool"
documentation = "https://github.com/gfmio/generic-pool"
keywords = ["pool", "generic"]
include = ["NOTICE"]

[tool.poetry.dependencies]
python = ">=3.6.2"

[tool.poetry.dev-dependencies]
black = "^21.5b0"
mypy = "^0.961"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
